// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleSwitch /> with \`big\` prop matches with snapshot 1`] = `
<div
  className="sc-bdVaJa dPVrAh"
>
  <button
    aria-label={null}
    aria-pressed={false}
    className="sc-bwzfXH cgSqaa"
    disabled={false}
    id="toggle-switch"
    onClick={[Function]}
    type="button"
  />
  <label
    className="sc-htpNat gGZSds"
    for="toggle-switch"
  >
    switch
  </label>
</div>
`;

exports[`<ToggleSwitch /> with \`checkedColor\` \`defaultColor\` & \`disabledColor\` props matches with snapshot 1`] = `
<div
  className="sc-bdVaJa dPVrAh"
>
  <button
    aria-label={null}
    aria-pressed={false}
    className="sc-bwzfXH laZgnZ"
    disabled={false}
    id="toggle-switch"
    onClick={[Function]}
    type="button"
  />
  <label
    className="sc-htpNat gyVlOB"
    for="toggle-switch"
  >
    switch
  </label>
</div>
`;

exports[`<ToggleSwitch /> with \`disabled\` prop matches with snapshot 1`] = `
<div
  className="sc-bdVaJa cXgxJA"
>
  <button
    aria-label={null}
    aria-pressed={false}
    className="sc-bwzfXH cgSqaa"
    disabled={true}
    id="toggle-switch"
    onClick={[Function]}
    type="button"
  />
  <label
    className="sc-htpNat kGWVbx"
    for="toggle-switch"
  >
    switch
  </label>
</div>
`;

exports[`<ToggleSwitch /> with \`isChecked\` prop matches with snapshot 1`] = `
<div
  className="sc-bdVaJa dPVrAh"
>
  <button
    aria-label={null}
    aria-pressed={true}
    className="sc-bwzfXH cgSqaa"
    disabled={false}
    id="toggle-switch"
    onClick={[Function]}
    type="button"
  />
  <label
    className="sc-htpNat kGWVbx"
    for="toggle-switch"
  >
    switch
  </label>
</div>
`;

exports[`<ToggleSwitch /> with \`isLabelVisible\` prop matches with snapshot 1`] = `
<div
  className="sc-bdVaJa dPVrAh"
>
  <button
    aria-label="switch"
    aria-pressed={false}
    className="sc-bwzfXH cgSqaa"
    disabled={false}
    id="toggle-switch"
    onClick={[Function]}
    type="button"
  />
</div>
`;

exports[`<ToggleSwitch /> with \`label\` prop matches with snapshot 1`] = `
<div
  className="sc-bdVaJa dPVrAh"
>
  <button
    aria-label={null}
    aria-pressed={false}
    className="sc-bwzfXH cgSqaa"
    disabled={false}
    id="toggle-switch"
    onClick={[Function]}
    type="button"
  />
  <label
    className="sc-htpNat kGWVbx"
    for="toggle-switch"
  >
    A test label
  </label>
</div>
`;

exports[`<ToggleSwitch /> with default props matches with snapshot 1`] = `
<div
  className="sc-bdVaJa dPVrAh"
>
  <button
    aria-label={null}
    aria-pressed={false}
    className="sc-bwzfXH cgSqaa"
    disabled={false}
    id="toggle-switch"
    onClick={[Function]}
    type="button"
  />
  <label
    className="sc-htpNat kGWVbx"
    for="toggle-switch"
  >
    switch
  </label>
</div>
`;
